config.ini : Fix path

--- a/config.ini
+++ b/config.ini
@@ -4,7 +4,7 @@ end_yy = 2018
 start_mm = 1
 end_mm = 12
 
-path = "../ranchi/ranchi_new.shp"
+path = "./ranchi/ranchi_new.shp"
 band_ee = "pr_sum"
 
 folder = 'earthengine_all'
