config.ini : New work new path

--- a/config.ini
+++ b/config.ini
@@ -5,7 +5,7 @@ start_mm = 1
 end_mm = 12
 
 ee_col = IDAHO_EPSCOR/TERRACLIMATE
-path = ../ranchi/ranchi_new.shp
+path = ../shps/Mumbai/Mumbai.shp
 band_ee = pr
 
 folder = earthengine_all
