update to version 2.0

--- a/config.ini
+++ b/config.ini
@@ -1,11 +1,11 @@
 [myvars]
-start_yy = 2008 
-end_yy = 2018
+start_yy = 2023
+end_yy = 2023
 start_mm = 1
 end_mm = 12
 
-ee_col = IDAHO_EPSCOR/TERRACLIMATE
-path = ../shps/Mumbai/Mumbai.shp
-band_ee = pr
+ee_col = UCSB-CHG/CHIRPS/DAILY
+path = ../../../shp/birbhum/birbhum.shp
+band_ee = precipitation
 
-folder = earthengine_all
+folder = anuv
